noTicket/fixesVisibility-Antonio

--- a/components/_helper_components/global/navBar/default.scss
+++ b/components/_helper_components/global/navBar/default.scss
@@ -37,15 +37,15 @@
 
   nav {
     z-index: 4001;
-    visibility: none;
+    display: none;
 
     @include breakpoint (desktop-sm) {
-      visibility: visible;
+      display: flex;
     }
 
     &.mobile-nav-activated {
       transform: translateX(1000px);
-      visibility: visible;
+      display: flex;
 
       .nav-menu-toggle {
         left: 15px;
